# recovery-total

./: .gitignore  CMakeLists.txt  README.md  build.bat
resources/: app.manifest  app.rc
src/: file_signatures.cpp  file_signatures.h  gui.cpp  gui.h  main.cpp  ntfs_parser.cpp  ntfs_parser.h  recovery.cpp  recovery.h  scanner.cpp  scanner.h  usb_diagnostic.cpp  usb_diagnostic.h  utils.cpp  utils.h
